--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Clean KMM Demo</string>
+    <string name="app_name">Clean KMP Demo</string>
     <string name="not_available">Not available</string>
     <string name="name">Name:</string>
     <string name="description">Description:</string>
